# librevoice-shell

./: CMakeLists.txt  README.md  dev_setup.sh
application/: CMakeLists.txt  appsettings.cpp  appsettings.h  main.cpp  ovos-shell.desktop  qml.qrc  qtquickcontrols2.conf
application/plugins/: EnvironmentSummary.cpp  EnvironmentSummary.h  ResetOperations.cpp  ResetOperations.h
application/qml/: DebugTerm.qml  FactoryResetUI.qml  KdeConnect.qml  Keyboard.qml  ListenerAnimation.qml  NotificationPopControlled.qml  NotificationPopSticky.qml  NotificationPopTransient.qml  NotificationsSystem.qml  OAuthLoader.qml  OAuthQrCodeLoader.qml  PairingArea.qml  Rounder.qml  ServiceWatcher.qml  ShutdownOptions.qml  SplashScreen.qml  StatusIndicator.qml  TermLoader.qml  main.qml
application/qml/osd/: SliderControl.qml  VolumeOSD.qml
application/qml/panel/: SlidingPanel.qml  test.qml
application/qml/panel/quicksettings/: AdditionalSettingsDelegate.qml  BrightnessSlider.qml  Delegate.qml  HomeDelegate.qml  MuteDelegate.qml  QuickSettings.qml  RebootDelegate.qml  RotationDelegate.qml  ShutdownDelegate.qml  SliderBase.qml  VolumeSlider.qml  WirelessDelegate.qml
lib/: CMakeLists.txt  configuration.cpp  configuration.h  openvoiceshellplugin.cpp  openvoiceshellplugin.h  placesmodel.cpp  placesmodel.h  plugins.qmltypes  qmldir
schemes/: CMakeLists.txt  manjaro_scheme.json  midnight_scheme.json  mycroft_scheme.json  ovos_scheme.json  ruby_scheme.json  slate_scheme.json  sunset_scheme.json
theme/: kirigamiplasmafactory.h  ovostheme.cpp  ovostheme.h
theme-legacy/: CMakeLists.txt  Theme.qml  kirigamiplasmafactory.cpp  kirigamiplasmafactory.h  ovostheme.cpp  ovostheme.h
